# telegrambot-reminders

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.yaml  docker-compose.yml  go.mod  go.sum  main.go  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  renovate.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: latest.yaml  main.yml  pr.yml  tagging.yml
src/: index.ts  main.ts  publicHolidays.ts  specialEvents.ts  specialevents.ts  telemetry.ts  tracing.ts  utils.ts
src/reminders_bot/: events.py  main.py  routines.py
src/services/: special_events.go  thursday.go
